--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "~10",
     "dotenv": "^16.4.7",
-    "eslint": "^9.21.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
@@ -50,7 +50,7 @@
     "postcss": "~8",
     "prettier": "^3.5.3",
     "tailwindcss": "~3",
-    "typescript": "~5.7.2",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
   }
